--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link type="text/css" rel="stylesheet" media="screen" href="/dhis-web-commons/css/menu.css">
 
     <link rel="stylesheet" href="node_modules/angular-material/angular-material.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body ng-app="dhisOrgUnitApp">
