--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>DHIS2 OrgUnit App</title>
+    <title>OrgUnit Matching App</title>
 
     <!-- Stylesheets related to the dhis2 menu -->
     <link type="text/css" rel="stylesheet" href="/dhis-web-commons/font-awesome/css/font-awesome.min.css"/>
@@ -16,7 +16,7 @@
     <div layout="column">
       <d2-header-bar></d2-header-bar>
       <md-toolbar layout="row" layout-padding style="margin-top: 44px">
-        <h1>DHIS2 OrgUnit App</h1>
+        <h1>OrgUnit Matching App</h1>
       </md-toolbar>
       <div layout="row">
         <div flex-offset="33" flex="33">
